2019-07-11  Colin Gillespie  <colin@jumpingrivers.com>

    * R/setup.R (pbSetup): Read conffile after pbSetup

    * .gitignore: Ignore .rpushbullet.json

2017-11-02  Colin Gillespie  <colin@jumpingrivers.com>

    * R/setup.R: Set conffile to be readable only by the user

2017-04-13  Dirk Eddelbuettel  <edd@debian.org>

	* .travis.yml (env): Condition tests on having env.vars which PRs
	from forks will not have to not expose the secret token

	* R/setup.R (pbSetup): Typo/spelling fix suggested by Michael Chirico

2017-02-17  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (Version, Date): Release 0.3.1

	* R/user.R: Do not run example
	* man/pbGetUser.Rd: Idem

2017-02-14  Dirk Eddelbuettel  <edd@debian.org>

	* R/init.R: Additional #nocov tags
	* R/isValid.R: Idem
	* R/pushes.R: Idem
	* R/setup.R: Idem

	* tests/simpleTests.R: Added calls to pbGetUser() etc

2017-02-11  Dirk Eddelbuettel  <edd@debian.org>

	* .rpushbullet.json.enc: Encoded configuration
	* .travis.yml: Decode configuration and run tests and coverage

	* R/setup.R (pbSetup): Support an optional default device
	* man/pbSetup.Rd: Documentation

	* tests/simpleTests.R: More calls to game test coverage statistics

2017-02-10  Seth S. Wenchel  <wenchel@gmail.com>

	* R/channel.R: Added S3 class pbChannelInfo with default, print, and
	summary methods
	* R/user.R: Added S3 class pbUser with default, print and summary
	methods
	* R/setup.R: New function pbValidateConf
	* R/isValid.R: Added missing header

2017-02-08  Seth S. Wenchel  <wenchel@gmail.com>

	* R/devices.R: Fix for another RJSONIO / jsonlite transition

2017-02-06  Seth S. Wenchel  <wenchel@gmail.com>

	* R/isValid.R: New (unexported) helper functions .isValidLey,
	.isValidDevice, .isValidChannel

2017-02-04  Dirk Eddelbuettel  <edd@max.eddelbuettel.com>

	* DESCRIPTION (Version, Date): Roll minor version

	* R/pushes.R (pbPost): Correct target device designation

	* attic/pbpost.r (localPbPost): Test script by Seth, slight mod'ed
