@@ -18,4 +18,4 @@ SystemRequirements: A user API key (which one can request from the website at
  the corresponding Pushbullet 'app' has been installed on any one of these.
 NeedsCompilation: no
 License: GPL (>= 2)
-RoxygenNote: 6.1.1
+RoxygenNote: 6.0.1
