@@ -3,7 +3,7 @@
 ##
 ##  Copyright (C) 2014         Dirk Eddelbuettel <edd@debian.org>
 ##  Copyright (C) 2014 - 2016  Dirk Eddelbuettel and Mike Birdgeneau
-##  Copyright (C) 2014 - 2017  Dirk Eddelbuettel, Mike Birdgeneau and Seth Wenchel
+##  Copyright (C) 2014 - 2019  Dirk Eddelbuettel, Mike Birdgeneau and Seth Wenchel
 ##
 ##  This file is part of RPushbullet.
 ##
@@ -255,7 +255,7 @@ pbPost <- function(type=c("note", "link", "file"),
 }
 
 
-##' This function get messages posted to Pushbullet.
+##' This function gets messages posted to Pushbullet.
 ##'
 ##' @title Get messages posted via Pushbullet
 ##' @param apikey The API key used to access the service. It can be
@@ -266,13 +266,13 @@ pbPost <- function(type=c("note", "link", "file"),
 ##' \code{~/.rpushbullet.json} which is read at package
 ##' initialization.
 ##' @param limit Limit number of post. Default is 10.
-##' @return A data.frame result record is return
+##' @return A data.frame result record is returned
 ##' @author Chanyub Park
 ##' @examples
 ##' \dontrun{
 ##' pbGetPost()
 ##' }
-pbGetPost <- function(apikey = .getKey(),
+pbGetPosts <- function(apikey = .getKey(),
                       limit = 10) {
     pburl <- paste0("https://api.pushbullet.com/v2/pushes?limit=", limit)
     res <- .createPush(pburl, apikey, hopt = "GET")
@@ -289,5 +289,3 @@ pbGetPost <- function(apikey = .getKey(),
     .checkReturnCode(res)
     return(rawToChar(res$content))
 }
-
-
