@@ -1,11 +1,10 @@
 % Generated by roxygen2: do not edit by hand
 % Please edit documentation in R/pushes.R
-\name{pbGetPost}
-\alias{pbGetPost}
+\name{pbGetPosts}
+\alias{pbGetPosts}
 \title{Get messages posted via Pushbullet}
 \usage{
-pbGetPost(apikey = .getKey(), limit = 10, verbose = FALSE,
-  debug = FALSE)
+pbGetPosts(apikey = .getKey(), limit = 10)
 }
 \arguments{
 \item{apikey}{The API key used to access the service. It can be
@@ -17,16 +16,12 @@ the global option).
 initialization.}
 
 \item{limit}{Limit number of post. Default is 10.}
-
-\item{verbose}{Boolean switch to add additional output}
-
-\item{debug}{Boolean switch to add even more debugging output}
 }
 \value{
-A data.frame result record is return
+A data.frame result record is returned
 }
 \description{
-This function get messages posted to Pushbullet.
+This function gets messages posted to Pushbullet.
 }
 \examples{
 \dontrun{
